--- a/src/components/mainScreen.module.scss
+++ b/src/components/mainScreen.module.scss
@@ -9,10 +9,8 @@ $color-white: rgba(255, 255, 255, 1);
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  justify-content: center;
-  overflow: hidden;
   height: 100vh;
-  width: 100vw;
+  justify-content: center;
 
   :global(.content) {
     display: flex;
@@ -47,6 +45,10 @@ $color-white: rgba(255, 255, 255, 1);
     border-radius: 0.25em;
     width: 40%;
     margin-bottom: 30px;
+
+    opacity: 0;
+    animation: climb-and-jump 1s cubic-bezier(0.17, 0.84, 0.44, 1) forwards;
+    animation-delay: 1s;
 
     text-shadow: 0 0 0.125em rgba($color-neon-secondary, 0.22),
       0 0 0.5em currentColor;
@@ -181,6 +183,18 @@ $color-white: rgba(255, 255, 255, 1);
     opacity: 0.6;
   }
   90% {
+    opacity: 1;
+  }
+}
+
+@keyframes climb-and-jump {
+  0% {
+    transform: translate(0, 150px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(0, 0);
     opacity: 1;
   }
 }
